# emmy

./: .gitattributes  .gitignore  CLAUDE.md  README.md  biome.json  conftest.py  package.json  pyproject.toml  tsconfig.base.json
.githooks/: pre-commit
.github/workflows/: airgap-phase3.yml  airgap.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/pre-phase/: PARALLEL-EXECUTION-04.4-04.5.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
air_gap/: README.md  session.jsonl  tool_registry.json
docker/: Dockerfile
docs/: agents_md_template.md  airgap-green-run.md  ci-runner.md  mcp_servers_template.yaml  profile-immutability.md  runbook.md
emmy_serve/: __init__.py  cli.py
emmy_serve/airgap/: __init__.py  ci_verify.py  ci_verify_phase3.py  probe.py  (+2 more)
eval/: MATRIX.md
profiles/: routes.yaml
scripts/: airgap_phase3_replay.sh  airgap_probe.py  boot-monitor.sh  build_emmy_image.sh  compute_max_input_tokens.ts  find_kv_budget.py  footer_parity_check.sh  hash_profile.py  install-client.sh  needle_in_haystack.py  phase3_1_02_walkthrough.sh  phase3_close_walkthrough.sh  sc1_trace_walkthrough.sh  sc2_200turn_compaction.sh  sc3_phase4_walkthrough.sh  sc5_offline_badge.sh  smoke_test.py  start_emmy.sh  start_observability.sh  start_searxng.sh  stop_observability.sh  stop_searxng.sh  strip_mistral_vision.py  thermal_replay.py  throughput_sweep.py  trigger_airgap_ci.sh  v-matrix-analyze.py  v-matrix-runner-parametric.sh  v-matrix-runner.sh  v3-rot-fixture-setup.sh  validate_profile.py  verify_airgap_ci.sh
(+841 files in other folders)
